force-app/main/default/objects/Customer_Profile__c/fields/Group_Purchasing_Organization_GPO__c.field-meta.xml
<CustomField>
    <fullName>Group_Purchasing_Organization_GPO__c</fullName>
    <inlineHelpText>If your customer is contracting under one of the GPO’s we have contracts with please select “Yes.”</inlineHelpText>
    <label>Healthcare Partner / GPO</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Afaxys</fullName>
            </value>
            <value>
                <fullName>Ascension/The Resource Group</fullName>
                <label>The Resource Group</label>
            </value>
            <value>
                <fullName>HealthTrust</fullName>
            </value>
            <value>
                <fullName>Health Resource Services (HRS)</fullName>
            </value>
            <value>
                <fullName>MedAssets / Broadlane</fullName>
            </value>
            <value>
                <fullName>Not Contracted</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Pramana</fullName>
            </value>
            <value>
                <fullName>Provider Supply Chain Partners / AHN</fullName>
            </value>
            <value>
                <fullName>Stericycle</fullName>
            </value>
            <value>
                <fullName>Sterling Health</fullName>
            </value>
            <value>
                <fullName>Synergy Health</fullName>
            </value>
            <value>
                <fullName>Trimetis</fullName>
            </value>
            <value>
                <fullName>UT Supply Chain Alliance</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>