force-app/main/default/objects/Customer_Profile__c/fields/Group_Purchasing_Organization_Name__c.field-meta.xml
<CustomField>
    <fullName>Group_Purchasing_Organization_Name__c</fullName>
    <label>Group Purchasing Organization Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>