force-app/main/default/objects/Customer_Profile__c/fields/HealthcareAccountStoringPatientRecords__c.field-meta.xml
<CustomField>
    <fullName>HealthcareAccountStoringPatientRecords__c</fullName>
    <description>This field is used to identify if an customer is a Healthcare customer</description>
    <label>Healthcare Account Storing Records</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>