force-app/main/default/objects/Customer_Profile__c/fields/How_will_the_customer_store_records__c.field-meta.xml
<CustomField>
    <fullName>How_will_the_customer_store_records__c</fullName>
    <label>How will the customer store records</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Carton</fullName>
            </value>
            <value>
                <fullName>Open Shelf</fullName>
            </value>
            <value>
                <fullName>Both</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>