force-app/main/default/objects/Customer_Profile__c/fields/Imaging_Center__c.field-meta.xml
<CustomField>
    <fullName>Imaging_Center__c</fullName>
    <description>Imaging Center where service performed</description>
    <inlineHelpText>Enter the Imaging Center where the service will be performed</inlineHelpText>
    <label>Imaging Center</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Addison</fullName>
            </value>
            <value>
                <fullName>Atlanta</fullName>
            </value>
            <value>
                <fullName>Boyers</fullName>
            </value>
            <value>
                <fullName>Cerritos</fullName>
            </value>
            <value>
                <fullName>Charlotte</fullName>
            </value>
            <value>
                <fullName>Dallas</fullName>
            </value>
            <value>
                <fullName>Denver</fullName>
            </value>
            <value>
                <fullName>Dublin</fullName>
            </value>
            <value>
                <fullName>Edmonton</fullName>
            </value>
            <value>
                <fullName>Freehold</fullName>
            </value>
            <value>
                <fullName>Ft. Wayne</fullName>
            </value>
            <value>
                <fullName>Halifax</fullName>
            </value>
            <value>
                <fullName>Hazelwood</fullName>
            </value>
            <value>
                <fullName>Jessup</fullName>
            </value>
            <value>
                <fullName>Laval</fullName>
            </value>
            <value>
                <fullName>Livermore</fullName>
            </value>
            <value>
                <fullName>Phoenix</fullName>
            </value>
            <value>
                <fullName>Rio Grande</fullName>
            </value>
            <value>
                <fullName>Stone</fullName>
            </value>
            <value>
                <fullName>Toronto</fullName>
            </value>
            <value>
                <fullName>Vancouver</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>