force-app/main/default/objects/Customer_Profile__c/fields/Individually_List_Files__c.field-meta.xml
<CustomField>
    <fullName>Individually_List_Files__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Individually List Files</label>
    <type>Checkbox</type>
</CustomField>