force-app/main/default/objects/Customer_Profile__c/fields/Invoice_Delivery_Method__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Delivery_Method__c</fullName>
    <label>Invoice Delivery Method</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Invoice_Package__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Print / Mail Delivery</fullName>
            </value>
            <value>
                <fullName>Pdf / Email</fullName>
            </value>
            <value>
                <fullName>Email Notification</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>