force-app/main/default/objects/Customer_Profile__c/fields/Invoice_Package__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Package__c</fullName>
    <label>Invoice Package</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Invoice Package 1</fullName>
            </value>
            <value>
                <fullName>Invoice Package 2</fullName>
            </value>
            <value>
                <fullName>Invoice Package 3</fullName>
            </value>
            <value>
                <fullName>Invoice Package 4</fullName>
            </value>
            <value>
                <fullName>Invoice Package 5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>