force-app/main/default/objects/Customer_Profile__c/fields/Is_2000_Cube_Moving_via_Free_Up_In__c.field-meta.xml
<CustomField>
    <fullName>Is_2000_Cube_Moving_via_Free_Up_In__c</fullName>
    <inlineHelpText>Does this opportunity have &gt;2,000 cube that is to be moved via a Free Up and In?</inlineHelpText>
    <label>Is &gt;2000 Cube Moving via Free Up &amp; In?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>