force-app/main/default/objects/Customer_Profile__c/fields/Is_the_backup_system_alive__c.field-meta.xml
<CustomField>
    <fullName>Is_the_backup_system_alive__c</fullName>
    <inlineHelpText>Is the backup system still in production?</inlineHelpText>
    <label>Is the backup system alive</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>