force-app/main/default/objects/Customer_Profile__c/fields/Litigation_DMS__c.field-meta.xml
<CustomField>
    <fullName>Litigation_DMS__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used as merge field in email sent to the DMS billing team.</description>
    <inlineHelpText>Required if DMS and Conversion Services selected</inlineHelpText>
    <label>Litigation DMS</label>
    <type>Checkbox</type>
</CustomField>