force-app/main/default/objects/Customer_Profile__c/fields/Material_Moving_From_Another_Vendor__c.field-meta.xml
<CustomField>
    <fullName>Material_Moving_From_Another_Vendor__c</fullName>
    <inlineHelpText>Does this opportunity include material moving from another Vendor?</inlineHelpText>
    <label>Material Moving From Another Vendor?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>