force-app/main/default/objects/Customer_Profile__c/fields/Media_Destruction_Customer__c.field-meta.xml
<CustomField>
    <fullName>Media_Destruction_Customer__c</fullName>
    <label>Media Destruction Customer</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>