force-app/main/default/objects/Customer_Profile__c/fields/NCSP_Phone__c.field-meta.xml
<CustomField>
    <fullName>NCSP_Phone__c</fullName>
    <description>Created as per POC NCSP Optimization Gitlab ##19133 - Capture IM connect user details in NCSP Wizard VF page</description>
    <label>Phone</label>
    <type>Phone</type>
</CustomField>