force-app/main/default/objects/Customer_Profile__c/fields/NCSP_Service_Line__c.field-meta.xml
<CustomField>
    <fullName>NCSP_Service_Line__c</fullName>
    <description>Select primary Service Lines offered on this opportunity</description>
    <inlineHelpText>Select primary Service Lines offered on this opportunity. If there are two service lines on this opportunity enter the additional service line in the Second Service Line field.</inlineHelpText>
    <label>NCSP Service Line</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Deal_Type__c</controllingField>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Accutrac</fullName>
            </value>
            <value>
                <fullName>Analytics Dashboard</fullName>
            </value>
            <value>
                <fullName>CDR</fullName>
            </value>
            <value>
                <fullName>Cloud Archive</fullName>
            </value>
            <value>
                <fullName>Connected</fullName>
            </value>
            <value>
                <fullName>Data Center</fullName>
            </value>
            <value>
                <fullName>DB&amp;R</fullName>
            </value>
            <value>
                <fullName>DMS</fullName>
            </value>
            <value>
                <fullName>DRCMI</fullName>
            </value>
            <value>
                <fullName>Entertainment Services</fullName>
            </value>
            <value>
                <fullName>EVault</fullName>
            </value>
            <value>
                <fullName>Geological Core</fullName>
            </value>
            <value>
                <fullName>Iron Cloud</fullName>
            </value>
            <value>
                <fullName>Live Vault</fullName>
            </value>
            <value>
                <fullName>One Time Shred</fullName>
            </value>
            <value>
                <fullName>RM</fullName>
            </value>
            <value>
                <fullName>RM Pathology</fullName>
            </value>
            <value>
                <fullName>Shred</fullName>
            </value>
            <value>
                <fullName>Vault Climate Control</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>