force-app/main/default/objects/Customer_Profile__c/fields/NCSP_Upsell_Type__c.field-meta.xml
<CustomField>
    <fullName>NCSP_Upsell_Type__c</fullName>
    <description>Used to indicate the type of Up-sell opportunity</description>
    <inlineHelpText>Please select the type of Up-sell this opportunity represents.</inlineHelpText>
    <label>NCSP Upsell Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>NCSP_Service_Line__c</controllingField>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>ATMS</fullName>
            </value>
            <value>
                <fullName>Cloud Archive</fullName>
            </value>
            <value>
                <fullName>CloudBlue</fullName>
            </value>
            <value>
                <fullName>Connected</fullName>
            </value>
            <value>
                <fullName>Dedicated Services</fullName>
            </value>
            <value>
                <fullName>DRCMI</fullName>
            </value>
            <value>
                <fullName>EMC</fullName>
            </value>
            <value>
                <fullName>Evault</fullName>
            </value>
            <value>
                <fullName>Inventory Transfer</fullName>
            </value>
            <value>
                <fullName>Library Move</fullName>
            </value>
            <value>
                <fullName>Live Vault</fullName>
            </value>
            <value>
                <fullName>Media Destruction</fullName>
            </value>
            <value>
                <fullName>Paper Destruction</fullName>
            </value>
            <value>
                <fullName>Server Change</fullName>
            </value>
            <value>
                <fullName>Service Frequency</fullName>
            </value>
            <value>
                <fullName>Service Increase</fullName>
            </value>
            <value>
                <fullName>Storage Increase</fullName>
            </value>
            <value>
                <fullName>Supply Increase</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>