force-app/main/default/objects/Customer_Profile__c/fields/Non_Standard_Setup__c.field-meta.xml
<CustomField>
    <fullName>Non_Standard_Setup__c</fullName>
    <description>Used to required additional information for a non standard account setup in SKP</description>
    <inlineHelpText>Not sure? Select No to see non-standard setup criteria</inlineHelpText>
    <label>Standard Setup</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>