force-app/main/default/objects/Customer_Profile__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Auto populated when the customer profile is created from the related list on the opportunity</description>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Customer Profiles</relationshipLabel>
    <relationshipName>Customer_Profiles</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>