force-app/main/default/objects/Customer_Profile__c/fields/OTS_Box_Quantity__c.field-meta.xml
<CustomField>
    <fullName>OTS_Box_Quantity__c</fullName>
    <inlineHelpText>Number of boxes to be shreded</inlineHelpText>
    <label>OTS Box Quantity</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>