force-app/main/default/objects/Customer_Profile__c/fields/OTS_Gallon_Ordered__c.field-meta.xml
<CustomField>
    <fullName>OTS_Gallon_Ordered__c</fullName>
    <label>OTS Gallon Ordered</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>32</fullName>
                <label>32 gallon</label>
            </value>
            <value>
                <fullName>65</fullName>
                <label>65 gallon</label>
            </value>
            <value>
                <fullName>95</fullName>
                <label>95 gallon</label>
            </value>
            <value>
                <fullName>175</fullName>
                <label>175 gallon</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>