force-app/main/default/objects/Customer_Profile__c/fields/OTS_Quantity_Consoles_Ordered__c.field-meta.xml
<CustomField>
    <fullName>OTS_Quantity_Consoles_Ordered__c</fullName>
    <label>OTS- Quantity Consoles Ordered</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>