force-app/main/default/objects/Customer_Profile__c/fields/PO_Number__c.field-meta.xml
<CustomField>
    <fullName>PO_Number__c</fullName>
    <description>Used as merge field in email sent to the DMS billing team</description>
    <label>PO Number</label>
    <length>10</length>
    <type>Text</type>
</CustomField>