force-app/main/default/objects/Customer_Profile__c/fields/PO_Required__c.field-meta.xml
<CustomField>
    <fullName>PO_Required__c</fullName>
    <description>Field used in NCSP wizard for sales rep to indicate PO required by a customer when submit for booking.</description>
    <inlineHelpText>When our customer requires a PO to pay their Invoice or for Order Placement.</inlineHelpText>
    <label>PO Required</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>