force-app/main/default/objects/Customer_Profile__c/fields/Primary_Service_Contact__c.field-meta.xml
<CustomField>
    <fullName>Primary_Service_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>look up to the contact table</description>
    <inlineHelpText>Enter the name of the primary service contact. This contact must be associated to the same account record as the opportunity</inlineHelpText>
    <label>Primary Service Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Customer Profiles</relationshipLabel>
    <relationshipName>Customer_Profiles</relationshipName>
    <type>Lookup</type>
</CustomField>