force-app/main/default/objects/Customer_Profile__c/fields/QTB_Deal_Type__c.field-meta.xml
<CustomField>
    <fullName>QTB_Deal_Type__c</fullName>
    <label>Deal Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New Deal</fullName>
            </value>
            <value>
                <fullName>Upsell</fullName>
            </value>
            <value>
                <fullName>Renewal</fullName>
            </value>
            <value>
                <fullName>Rate_Change</fullName>
                <label>Rate Change</label>
            </value>
            <value>
                <fullName>Amend</fullName>
                <isActive>false</isActive>
                <label>Amend</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>