force-app/main/default/objects/Customer_Profile__c/fields/QTB_PO_Type__c.field-meta.xml
<CustomField>
    <fullName>QTB_PO_Type__c</fullName>
    <label>PO Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Annual or Quarterly PO with set Dollar Amount</fullName>
            </value>
            <value>
                <fullName>Authorized User</fullName>
                <isActive>false</isActive>
                <label>Authorized User</label>
            </value>
            <value>
                <fullName>Blanket PO</fullName>
            </value>
            <value>
                <fullName>Closed-Time</fullName>
                <isActive>false</isActive>
                <label>Closed-Time</label>
            </value>
            <value>
                <fullName>Closed Value</fullName>
                <isActive>false</isActive>
                <label>Closed Value</label>
            </value>
            <value>
                <fullName>Invoice Level PO</fullName>
            </value>
            <value>
                <fullName>-None-</fullName>
                <isActive>false</isActive>
                <label>-None-</label>
            </value>
            <value>
                <fullName>Open</fullName>
                <isActive>false</isActive>
                <label>Open</label>
            </value>
            <value>
                <fullName>Order Level PO</fullName>
            </value>
            <value>
                <fullName>PO by Order</fullName>
                <isActive>false</isActive>
                <label>PO by Order</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>