force-app/main/default/objects/Customer_Profile__c/fields/QTB_Primary_Product_Line__c.field-meta.xml
<CustomField>
    <fullName>QTB_Primary_Product_Line__c</fullName>
    <label>Primary Product Line</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Records Management</fullName>
            </value>
            <value>
                <fullName>Data Management</fullName>
            </value>
            <value>
                <fullName>Shred</fullName>
            </value>
            <value>
                <fullName>Scan</fullName>
            </value>
            <value>
                <fullName>Special Projects – Records Management</fullName>
            </value>
            <value>
                <fullName>Special Projects – Data Management</fullName>
            </value>
            <value>
                <fullName>SMB Package</fullName>
            </value>
            <value>
                <fullName>Special Projects - International</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>