force-app/main/default/objects/Customer_Profile__c/fields/QTB_Standard_Set_Up__c.field-meta.xml
<CustomField>
    <fullName>QTB_Standard_Set_Up__c</fullName>
    <label>Standard Set-Up</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>