force-app/main/default/objects/Customer_Profile__c/fields/Record_Code_Parameter__c.field-meta.xml
<CustomField>
    <fullName>Record_Code_Parameter__c</fullName>
    <description>Non Standard setup- used for creating SKP shell</description>
    <label>Record Code Parameter</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>0-Not Validated, No Schedule</fullName>
            </value>
            <value>
                <fullName>1-Schedule Manages Box Retention</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>