force-app/main/default/objects/Customer_Profile__c/fields/Remittance_Level__c.field-meta.xml
<CustomField>
    <fullName>Remittance_Level__c</fullName>
    <label>Remittance Level</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Invoice_Package__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>0-Electronic</fullName>
            </value>
            <value>
                <fullName>1-Customer</fullName>
            </value>
            <value>
                <fullName>2-Reporting Division</fullName>
            </value>
            <value>
                <fullName>3-Division/Department</fullName>
            </value>
            <value>
                <fullName>4-Enterprise</fullName>
            </value>
            <value>
                <fullName>5-Division</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>