force-app/main/default/objects/Customer_Profile__c/fields/RM_Label_Quantities__c.field-meta.xml
<CustomField>
    <fullName>RM_Label_Quantities__c</fullName>
    <inlineHelpText>order in quantities of 25</inlineHelpText>
    <label>RM - Label Quantities</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>