force-app/main/default/objects/Customer_Profile__c/fields/RM_Label_Type__c.field-meta.xml
<CustomField>
    <fullName>RM_Label_Type__c</fullName>
    <label>RM - Label Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>3 Part Forms</fullName>
            </value>
            <value>
                <fullName>T labels</fullName>
            </value>
            <value>
                <fullName>T Label green</fullName>
            </value>
            <value>
                <fullName>T Label orange</fullName>
            </value>
            <value>
                <fullName>Trans Combo</fullName>
            </value>
            <value>
                <fullName>Trans Pad</fullName>
            </value>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
            <value>
                <fullName>Contact Customer</fullName>
            </value>
            <value>
                <fullName>Iron Mountain</fullName>
            </value>
            <value>
                <fullName>Incumbent</fullName>
            </value>
            <value>
                <fullName>Client&apos;s Own</fullName>
            </value>
            <value>
                <fullName>Various</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>