force-app/main/default/objects/Customer_Profile__c/fields/RM_Supply_Box_Order_Qty__c.field-meta.xml
<CustomField>
    <fullName>RM_Supply_Box_Order_Qty__c</fullName>
    <inlineHelpText>order in quantities of 10</inlineHelpText>
    <label>RM - Supply Box Order Qty</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>