force-app/main/default/objects/Customer_Profile__c/fields/RM_Supply_Box_Order_Type__c.field-meta.xml
<CustomField>
    <fullName>RM_Supply_Box_Order_Type__c</fullName>
    <label>RM - Supply Box Order Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1.2</fullName>
            </value>
            <value>
                <fullName>1.25</fullName>
            </value>
            <value>
                <fullName>2.4</fullName>
            </value>
            <value>
                <fullName>3.6</fullName>
            </value>
            <value>
                <fullName>Check Box</fullName>
            </value>
            <value>
                <fullName>Planner Carton</fullName>
            </value>
            <value>
                <fullName>X-Ray Box</fullName>
            </value>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
            <value>
                <fullName>Customer Contact</fullName>
            </value>
            <value>
                <fullName>IH Half Cube Box</fullName>
            </value>
            <value>
                <fullName>IL Lever Arch Box</fullName>
            </value>
            <value>
                <fullName>IP Printout Box</fullName>
            </value>
            <value>
                <fullName>IS Std File Box</fullName>
            </value>
            <value>
                <fullName>IT Triangular Tube Box</fullName>
            </value>
            <value>
                <fullName>IV Voucher Box</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>