force-app/main/default/objects/Customer_Profile__c/fields/Sales_Rep_Name__c.field-meta.xml
<CustomField>
    <fullName>Sales_Rep_Name__c</fullName>
    <description>This value is  pulled from the opportunity owner</description>
    <formula>Opportunity__r.Owner_First_Name__c  &amp; &apos; &apos; &amp;  Opportunity__r.Owner_Last_Name__c</formula>
    <inlineHelpText>Auto populated from the opportunity owner</inlineHelpText>
    <label>Sales Rep Name</label>
    <type>Text</type>
</CustomField>