force-app/main/default/objects/Customer_Profile__c/fields/Sales_Rep_percent__c.field-meta.xml
<CustomField>
    <fullName>Sales_Rep_percent__c</fullName>
    <defaultValue>1</defaultValue>
    <description>percent of the deal to apply to the opportunity owner&apos;s commission</description>
    <inlineHelpText>Enter the percent of the deal to apply to the opportunity owner&apos;s commission</inlineHelpText>
    <label>Sales Rep %</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>