force-app/main/default/objects/Customer_Profile__c/fields/Sales_Rep_Percent_from_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Sales_Rep_Percent_from_Opportunity__c</fullName>
    <formula>Opportunity__r.Sales_Rep_Percent__c</formula>
    <label>Sales Rep % (from Opportunity)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>