force-app/main/default/objects/Customer_Profile__c/fields/Same_as_Billing_Address__c.field-meta.xml
<CustomField>
    <fullName>Same_as_Billing_Address__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used to satisfy the validation rule that requires a Correspondence Address</description>
    <inlineHelpText>Check this box or the Same as Service Address, Same as Current Correspondence Address or enter a Correspondence Address below</inlineHelpText>
    <label>Same as Billing Address</label>
    <type>Checkbox</type>
</CustomField>