force-app/main/default/objects/Customer_Profile__c/fields/Same_as_Current_Correspondence_Address__c.field-meta.xml
<CustomField>
    <fullName>Same_as_Current_Correspondence_Address__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check this box if the address currently being used for correspondence is correct</inlineHelpText>
    <label>Same as Current Correspondence Address</label>
    <type>Checkbox</type>
</CustomField>