force-app/main/default/objects/Customer_Profile__c/fields/Same_as_Service_Address__c.field-meta.xml
<CustomField>
    <fullName>Same_as_Service_Address__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used to satisfy the validation rule that requires a Billing Address</description>
    <inlineHelpText>Check this box or the Same as Current Billing Address or enter a Billing Address below</inlineHelpText>
    <label>Same as Service Address</label>
    <type>Checkbox</type>
</CustomField>